--- a/1_CondLogic/college.gohtml
+++ b/1_CondLogic/college.gohtml
@@ -9,8 +9,8 @@
             <title>Conditinal</title>
         </head>
 <body>
-<h3> The Name of the university is {{ .Name}},</h3>
-{{if.cond}}
+<h3> The Name of the university is {{ .Name}}, It is situated in {{.City}} </h3>
+{{if.Cond}}
 <h3>You can stay in Fresno</h3>
 {{else}}
 <h3>You cant stay in Fresno</h3>
